# pipewire-send-command

./: meson.build
include/utils/: node_registry.h  pod_message_builder.h
src/: main.cpp
